--- a/game.html
+++ b/game.html
@@ -256,8 +256,30 @@
       transition: all 0.3s;
       box-shadow: 0 5px 15px rgba(255, 0, 110, 0.4);
     }
+
+    #creditsBtn {
+      display: none;
+      margin: 25px auto 0;
+      padding: 12px 30px;
+      font-size: 1.1rem;
+      background: linear-gradient(135deg, var(--accent), #ff006e);
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      color: white;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      transition: all 0.3s;
+      box-shadow: 0 5px 15px rgba(255, 0, 110, 0.4);
+    }
     
     #restartBtn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 20px rgba(255, 0, 110, 0.6);
+    }
+
+    #creditsBtn:hover {
       transform: translateY(-3px);
       box-shadow: 0 8px 20px rgba(255, 0, 110, 0.6);
     }
@@ -298,6 +320,8 @@
         font-size: 1rem;
       }
     }
+
+    
   </style>
 </head>
 <body>
@@ -332,6 +356,8 @@
     <div id="feedback"></div>
 
     <button id="restartBtn">Jogar Novamente</button>
+    <button id="creditsBtn" style="display: none;">Ver Créditos</button>
+
   </div>
 
   <script>
@@ -341,34 +367,60 @@
     const soundVictory = new Audio('sounds/victory.mp3');
 
     const perguntas = [
-      {
-        texto: "Mostra ordem entre objetos no tempo",
-        correta: "Diagrama de Sequência",
-        opcoes: ["Diagrama de Estados", "Diagrama de Sequência", "Diagrama de Atividades", "Diagrama de Comunicação"]
-      },
-      {
-        texto: "Mostra mudanças de estado baseado em eventos",
-        correta: "Diagrama de Estados",
-        opcoes: ["Diagrama de Atividades", "Diagrama de Sequência", "Diagrama de Estados", "Diagrama de Classes"]
-      },
-      {
-        texto: "Representa fluxo de processos com decisões",
-        correta: "Diagrama de Atividades",
-        opcoes: ["Diagrama de Casos de Uso", "Diagrama de Atividades", "Diagrama de Componentes", "Diagrama de Sequência"]
-      },
-      {
-        texto: "Mostra quem colabora com quem, estrutura",
-        correta: "Diagrama de Comunicação",
-        opcoes: ["Diagrama de Pacotes", "Diagrama de Classes", "Diagrama de Sequência", "Diagrama de Comunicação"]
-      }
-    ];
+  {
+    texto: "Mostra ordem entre objetos no tempo",
+    correta: "Diagrama de Sequência",
+    opcoes: ["Diagrama de Estados", "Diagrama de Sequência", "Diagrama de Atividades", "Diagrama de Comunicação"]
+  },
+  {
+    texto: "Mostra mudanças de estado baseado em eventos",
+    correta: "Diagrama de Estados",
+    opcoes: ["Diagrama de Atividades", "Diagrama de Sequência", "Diagrama de Estados", "Diagrama de Classes"]
+  },
+  {
+    texto: "Representa fluxo de processos com decisões",
+    correta: "Diagrama de Atividades",
+    opcoes: ["Diagrama de Casos de Uso", "Diagrama de Atividades", "Diagrama de Componentes", "Diagrama de Sequência"]
+  },
+  {
+    texto: "Mostra quem colabora com quem, estrutura",
+    correta: "Diagrama de Comunicação",
+    opcoes: ["Diagrama de Pacotes", "Diagrama de Classes", "Diagrama de Sequência", "Diagrama de Comunicação"]
+  },
+  {
+    texto: "Mostra funcionalidades do sistema e seus atores",
+    correta: "Diagrama de Casos de Uso",
+    opcoes: ["Diagrama de Pacotes", "Diagrama de Casos de Uso", "Diagrama de Atividades", "Diagrama de Componentes"]
+  },
+  {
+    texto: "Modela a arquitetura física do sistema",
+    correta: "Diagrama de Componentes",
+    opcoes: ["Diagrama de Sequência", "Diagrama de Classes", "Diagrama de Componentes", "Diagrama de Atividades"]
+  },
+  {
+    texto: "Agrupa elementos relacionados em pacotes",
+    correta: "Diagrama de Pacotes",
+    opcoes: ["Diagrama de Casos de Uso", "Diagrama de Pacotes", "Diagrama de Componentes", "Diagrama de Comunicação"]
+  },
+  {
+    texto: "Foca em atributos, métodos e relacionamentos",
+    correta: "Diagrama de Classes",
+    opcoes: ["Diagrama de Objetos", "Diagrama de Componentes", "Diagrama de Classes", "Diagrama de Pacotes"]
+  }
+];
+
 
     const inimigos = [
-      "img/monster1.png",
-      "img/monster2.png",
-      "img/monster3.png",
-      "img/monster4.png"
-    ];
+  "img/monster1.png",
+  "img/monster2.png",
+  "img/monster3.png",
+  "img/monster4.png",
+  "img/monster5.png",
+  "img/monster6.png",
+  "img/monster7.png",
+  "img/monster8.png"
+];
+
 
     let indice = 0;
     let vidaPlayer = 100;
@@ -381,6 +433,8 @@
     const enemyHealthEl = document.getElementById('enemy-health');
     const enemyImgEl = document.getElementById('enemy');
     const restartBtn = document.getElementById('restartBtn');
+    const creditsBtn = document.getElementById('creditsBtn');
+
 
     // Cria partículas de fundo
     function createParticles() {
@@ -454,6 +508,7 @@
         enemyImgEl.style.display = 'none';
         soundVictory.play(); // Toca som de vitória
         restartBtn.style.display = 'inline-block'; // Mostrar botão para reiniciar após vitória
+        creditsBtn.style.display = 'inline-block';
         return;
       }
 
@@ -548,7 +603,14 @@
     window.addEventListener('DOMContentLoaded', () => {
       createParticles();
       carregarPergunta();
+      const backgroundMusic = new Audio('sounds/background.mp3');
+backgroundMusic.loop = true;
+backgroundMusic.volume = 0.5; // Ajuste o volume conforme necessário
+backgroundMusic.play();
     });
+    creditsBtn.addEventListener('click', () => {
+  window.location.href = 'creditos.html';
+});
   </script>
 </body>
 </html>
