--- a/creditos.html
+++ b/creditos.html
@@ -96,7 +96,8 @@
     <h1 class="titulo">Créditos</h1>
     <p class="texto">
       Este site foi desenvolvido por Matheus Galvão.<br>
-      @_theusgalvao_<br><br>
+      @_theusgalvao_<br>
+      Aluno do Ensino Técnico T.I - Eniac <br><br>
       Inspirado em jogos de RPG e modelagem UML.<br>
       Tecnologias utilizadas: HTML, CSS, JavaScript,<br>
       Canva, ElevenLabs, ChatGPT, DeepSeek.<br>
